# rag-learning

./: README.md  pyproject.toml
data/: notes.txt
notebooks/: chromadb_tutorial.ipynb
notrbook/: chromadb_tutorial.ipynb
